--- a/Workshop/Pages/_Host.cshtml
+++ b/Workshop/Pages/_Host.cshtml
@@ -10,6 +10,7 @@
     <title>Workshop</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/login.css" rel="stylesheet" />
 </head>
@@ -19,5 +20,6 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Blazored.Modal/blazored.modal.js"></script>
 </body>
 </html>
