--- a/Workshop/App.razor
+++ b/Workshop/App.razor
@@ -1,4 +1,4 @@
-﻿
+﻿<CascadingBlazoredModal>
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -11,3 +11,4 @@
             </CascadingAuthenticationState>
         </NotFound>
     </Router>
+</CascadingBlazoredModal>
