--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -16,30 +16,35 @@ else
         <table id="activityTable" class="table table-striped table-bordered" style="text-align:center;">
             <thead>
                 <tr>
+                    <th>Pojazd</th>
+                    <th>Nr rej.</th>
                     <th>Typ</th>
                     <th>Opis</th>
                     <th>Wynik</th>
                     <th>Status</th>
-                    <th>Data rejestracji aktywności</th>
-                    <th>Data zakończenia aktywności</th>
+                    <th>Data rejestracji</th>
+                    <th>Data zakończenia</th>
                     <th>Akcje</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var activity in activities)
                 {
-                    <tr>
-                        <td>@activity.ActivityType</td>
-                        <td>@activity.Description</td>
-                        <td>@(activity.Result ?? " - ")</td>
-                        <td>@activity.Status</td>
-                        <td>@activity.Registered</td>
-                        <td>@(activity.FinishedOrCancelled == DateTime.MinValue ? "Aktywność nie jest jeszcze ukończona" : activity.FinishedOrCancelled.ToString())</td>
-                        <td>
-                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">Wykonaj</button>
-                            <button type="button" class="btn btn-danger" @onclick="() => EndActivity(activity)">Zakończ</button>
-                        </td>
-                    </tr>
+                <tr>
+                    <td>@activity.Request.Car.Brand @activity.Request.Car.Model</td>
+                    <td>@activity.Request.Car.RegistrationNumber</td>
+                    <td>@activity.ActivityType.ActivityName</td>
+                    <td>@activity.Description</td>
+                    <td>@(string.IsNullOrWhiteSpace(activity.Result) ? " - " : activity.Result)</td>
+                    <td>@activity.Status.GetDisplayName()</td>
+                    <td>@activity.Registered</td>
+                    <td>@(activity.FinishedOrCancelled == DateTime.MinValue ? " - " : activity.FinishedOrCancelled.ToString())</td>
+                    <td style="min-width: 300px">
+                        <button type="button" class="btn btn-success" @onclick="() => RestoreActivity(activity)">Realizuj</button>
+                        <button type="button" class="btn btn-warning" @onclick="() => ShowModal(activity, true)">Zakończ</button>
+                        <button type="button" class="btn btn-danger" @onclick="() => ShowModal(activity, false)">Anuluj</button>
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
@@ -51,8 +56,6 @@ else
 
         </div>
     }
-    <button @onclick="ShowModal" class="btn btn-primary">View Movies</button>
-
 }
 
 
@@ -66,6 +69,7 @@ else
     {
         worker = await employeeService.GetUserFromLocalStorage();
         activities = await activityService.GetWorkerActivities(worker.Id);
+        activities.OrderBy(a => a.Request);
         await base.OnInitializedAsync();
     }
 
@@ -74,14 +78,22 @@ else
         navigationManager.NavigateTo($"/editActivity/{activity.Id}");
 
     }
-    protected void EndActivity(Activity activity)
+    protected async Task RestoreActivity(Activity activity)
     {
-
+        activity.Result = "";
+        activity.FinishedOrCancelled = default;
+        activity.Status = Status.InProgress;
+        activityService.Update(activity);
+        await activityService.SaveChangesAsync();
     }
 
-    async Task ShowModal()
+    protected async Task ShowModal(Activity activity, bool finish)
     {
-        var moviesModal = Modal.Show<EditActivity>("My Movies");
+        var parameters = new ModalParameters();
+        parameters.Add(nameof(EditActivity.ActivityId), activity.Id);
+        parameters.Add(nameof(EditActivity.finish), finish);
+
+        var moviesModal = Modal.Show<EditActivity>("Zakończ lub anuluj czynność", parameters);
         var result = await moviesModal.Result;
 
         if (result.Cancelled)
@@ -90,7 +102,7 @@ else
         }
         else
         {
-            Console.WriteLine("Modal was closed");
+            activity = (Activity)result.Data;
         }
     }
-}
+    }
