--- a/Workshop/Pages/EditCar.razor
+++ b/Workshop/Pages/EditCar.razor
@@ -10,7 +10,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <EditForm Model="@car" OnValidSubmit="@DoEditCar">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="form-group">
                 <label for="Name" class="control-label">Marka</label>
                 <input for="Name" class="form-control" @bind-value="@car.Brand" />
@@ -37,10 +39,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-primary" @onclick="() => DoEditCar(car)">Zapisz</button>
+                <button type="submit" class="btn btn-primary">Zapisz</button>
                 <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
             </div>
-        </form>
+        </EditForm>
     </div>
 </div>
 
@@ -59,7 +61,7 @@
         cartypes = await carTypeService.GetAllAsync();
     }
 
-    protected async Task DoEditCar(Car car)
+    protected async Task DoEditCar()
     {
         car.CarType = await carTypeService.GetTypeByCode(chosenCarTypeCode);
         carService.Update(car);
