--- a/Workshop/Pages/EditClient.razor
+++ b/Workshop/Pages/EditClient.razor
@@ -9,7 +9,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <EditForm Model="@client" OnValidSubmit="@DoEditClient">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <div class="form-group">
                 <label for="Name" class="control-label">Imię</label>
                 <input for="Name" class="form-control" @bind-value="@client.FirstName" />
@@ -23,10 +25,10 @@
                 <input for="Name" class="form-control" @bind-value="@client.PhoneNumber" />
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-primary" @onclick="() => DoEditClient()">Zapisz</button>
+                <button type="submit" class="btn btn-primary">Zapisz</button>
                 <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
             </div>
-        </form>
+        </EditForm>
     </div>
 </div>
 
