--- a/Workshop/Pages/Activities.razor
+++ b/Workshop/Pages/Activities.razor
@@ -27,6 +27,10 @@ else
                     <th>Status</th>
                     <th>Data rejestracji</th>
                     <th>Data zakończenia</th>
+                    @if (employee.Role == Role.Manager)
+                    { 
+                        <th>Pracownik</th> 
+                    }
                     <th>Akcje</th>
                 </tr>
             </thead>
@@ -42,6 +46,10 @@ else
                     <td><span class="badge badge-@Badges.GetBadge(activity.Status)">@activity.Status.GetDisplayName()</span></td>
                     <td>@activity.Registered</td>
                     <td>@(activity.FinishedOrCancelled == DateTime.MinValue ? " - " : activity.FinishedOrCancelled.ToString())</td>
+                    @if (employee.Role == Role.Manager) 
+                    { 
+                        <td>@(activity.Worker != null ? activity.Worker.FirstName + " " + activity.Worker.LastName + " (" + activity.Worker.Username + ")" : "Brak")</td>
+                    }
                     <td style="min-width: 300px">
                         @if (employee.Role == Role.Worker)
                         {
@@ -49,7 +57,7 @@ else
                         }
                         else
                         {
-                            <button type="button" class="btn btn-success" @onclick="() => EditActivity(activity)">Edytuj</button>
+                            <button type="button" class="btn btn-success" @onclick="() => AssignActivity(activity)">Przypisz</button>
                         }
                         <button type="button" class="btn btn-warning" @onclick="() => ShowModal(activity, true)">Zakończ</button>
                         <button type="button" class="btn btn-danger" @onclick="() => ShowModal(activity, false)">Anuluj</button>
@@ -105,9 +113,21 @@ else
         await activityService.SaveChangesAsync();
     }
 
-    protected void EditActivity(Activity activity)
+    protected async Task AssignActivity(Activity activity)
     {
-        navigationManager.NavigateTo($"/editActivity/{activity.Id}");
+        var modal = Modal.Show<WorkersModal>("Wybierz pracownika");
+        var result = await modal.Result;
+
+        if (result.Cancelled)
+        {
+            Console.WriteLine("Modal was cancelled");
+        }
+        else
+        {
+            activity.Worker = (Employee)result.Data;
+            activityService.Update(activity);
+            await activityService.SaveChangesAsync();
+        }
     }
 
     protected async Task ShowModal(Activity activity, bool finish)
@@ -116,8 +136,8 @@ else
         parameters.Add(nameof(FinishActivity.ActivityId), activity.Id);
         parameters.Add(nameof(FinishActivity.finish), finish);
 
-        var moviesModal = Modal.Show<FinishActivity>("Zakończ lub anuluj czynność", parameters);
-        var result = await moviesModal.Result;
+        var modal = Modal.Show<FinishActivity>("Zakończ lub anuluj czynność", parameters);
+        var result = await modal.Result;
 
         if (result.Cancelled)
         {
