--- a/Workshop/Pages/AddActivities.razor
+++ b/Workshop/Pages/AddActivities.razor
@@ -29,7 +29,7 @@
                     <textarea placeholder="Opis aktywności" @bind="activity.Description" class="form-control" id="Description" rows="1" maxlength="100" style="resize:none"></textarea>
                 </div>
                 <div class="form-group">
-                    <select for="activityType" class="form-control" @bind="activity.ActivityType.Code">
+                    <select for="activityType" class="form-control" @bind="activitiesActivityTypes[activities.IndexOf(activity)]">
                         @foreach (ActivityType activityType in activityTypes)
                         {
                             <option value="@activityType.Code">@activityType.ActivityName</option>
@@ -53,6 +53,7 @@
 
     private Request request;
     private List<Activity> activities = new List<Activity>();
+    private List<string> activitiesActivityTypes = new List<string>();
     private IEnumerable<ActivityType> activityTypes;
     private bool DescriptionsNotEmpty = true;
 
@@ -61,39 +62,29 @@
         request = await requestService.GetRequest(RequestId);
         activityTypes = await activityTypeService.GetAllAsync();
         activities = request.Activities.ToList();
-        foreach (var activity in activities)
+
+        foreach(var activity in activities)
         {
-            activity.ActivityType = new ActivityType()
-            {
-                Code = activity.ActivityType.Code
-            };
+            activitiesActivityTypes.Add(activity.ActivityType.Code);
         }
+
         if(activities.Count == 0)
         {
-            activities.Add(new Activity()
-            {
-                ActivityType = new ActivityType()
-                {
-                    Code = activityTypes.First().Code
-                }
-            });
+            AddActivity();
         }
     }
 
-    private void DeleteActivity(Activity activity)
+    private async Task DeleteActivity(Activity activity)
     {
+        activityService.Delete(activity);
+        await activityService.SaveChangesAsync();
         activities.Remove(activity);
     }
 
     private void AddActivity()
     {
-        activities.Add(new Activity()
-        {
-            ActivityType = new ActivityType()
-            {
-                Code = activityTypes.First().Code
-            }
-        });
+        activities.Add(new Activity());
+        activitiesActivityTypes.Add(activityTypes.First().Code);
     }
 
     private async Task SaveActivities()
@@ -107,17 +98,18 @@
             }
         }
         DescriptionsNotEmpty = true;
+
         for (int i = 0; i < activities.Count; i++)
         {
-            activities[i].Registered = DateTime.Now;
             activities[i].SequenceNumber = i;
-            activities[i].ActivityType = await activityTypeService.GetActivityTypeByCode(activities[i].ActivityType.Code);
+            activities[i].ActivityType = await activityTypeService.GetActivityTypeByCode(activitiesActivityTypes[i]);
             if (activities[i].Request != null)
             {
                 activityService.Update(activities[i]);
             }
             else
             {
+                activities[i].Registered = DateTime.Now;
                 activities[i].Status = Status.Pending;
                 activities[i].Request = request;
                 await activityService.CreateAsync(activities[i]);
@@ -132,6 +124,9 @@
         var currentIndex = activities.IndexOf(activity);
         activities[currentIndex] = activities[currentIndex - 1];
         activities[currentIndex - 1] = activity;
+        var currentType = activitiesActivityTypes[currentIndex];
+        activitiesActivityTypes[currentIndex] = activitiesActivityTypes[currentIndex - 1];
+        activitiesActivityTypes[currentIndex - 1] = currentType;
     }
 
     private void MoveDown(Activity activity)
@@ -139,6 +134,9 @@
         var currentIndex = activities.IndexOf(activity);
         activities[currentIndex] = activities[currentIndex + 1];
         activities[currentIndex + 1] = activity;
+        var currentType = activitiesActivityTypes[currentIndex];
+        activitiesActivityTypes[currentIndex] = activitiesActivityTypes[currentIndex + 1];
+        activitiesActivityTypes[currentIndex + 1] = currentType;
     }
 
     private bool IsSelected(Activity activity, ActivityType activityType)
