--- a/Workshop/Pages/Cars.razor
+++ b/Workshop/Pages/Cars.razor
@@ -37,7 +37,7 @@ else
         <td>
             <button type="button" class="btn btn-warning" @onclick="() => EditCar(car)">Edytuj</button>
             <button type="button" class="btn btn-danger" @onclick="() => DeleteCar(car)">Usuń</button>
-            <button type="button" class="btn btn-primary" @onclick="() => AddCar(car)">Przypisz</button>
+            <button type="button" class="btn btn-success" @onclick="() => AssignClient(car)">Zmień właściciela</button>
             <button type="button" class="btn btn-primary" @onclick="() => AddRequest(car)">Dodaj zgłoszenie</button>
         </td>
     </tr>
@@ -53,7 +53,9 @@ else
 }
 }
 
-@code { private IEnumerable<Car> cars;
+@code { 
+    private IEnumerable<Car> cars;
+    [CascadingParameter] public IModalService Modal { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -69,13 +71,30 @@ else
 
     private async Task DeleteCar(Car car)
     {
-        //await carService.DeleteCar(car);
         navigationManager.NavigateTo("/cars", forceLoad: true);
     }
 
     private void AddCar(Car car)
     {
         navigationManager.NavigateTo($"/addCar/{car.Client.Id}");
+    }
+
+
+    protected async Task AssignClient(Car car)
+    {
+        var modal = Modal.Show<ClientsModal>("Wybierz nowego właściciela");
+        var result = await modal.Result;
+
+        if (result.Cancelled)
+        {
+            Console.WriteLine("Modal was cancelled");
+        }
+        else
+        {
+            car.Client = (Client)result.Data;
+            carService.Update(car);
+            await carService.SaveChangesAsync();
+        }
     }
 
     private void AddRequest(Car car)
