--- a/Workshop/Shared/NavMenu.razor
+++ b/Workshop/Shared/NavMenu.razor
@@ -48,8 +48,8 @@
         <AuthorizeView Roles="@($"{Role.Administrator}")">
             <Authorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="addEmployee" Match="NavLinkMatch.All">
-                        <span class="oi oi-home" aria-hidden="true"></span> Dodaj pracownika
+                    <NavLink class="nav-link" href="employees" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Pracownicy
                     </NavLink>
                 </li>
             </Authorized>
