--- a/Workshop/Pages/EditEmployee.razor
+++ b/Workshop/Pages/EditEmployee.razor
@@ -29,6 +29,15 @@
                 <input for="Name" class="form-control" @bind-value="@employee.Password" />
             </div>
             <div class="form-group">
+                <label for="Role" class="control-label">Rola</label>
+                <select for="Role" class="form-control" @bind="employee.Role">
+                    @foreach (Role role in Enum.GetValues(typeof(Role)))
+                    {
+                        <option value="@role">@role.GetDisplayName()</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
                 <button type="submit" class="btn btn-primary">Zapisz</button>
                 <button type="button" class="btn btn-danger" @onclick="() => Cancel()">Anuluj</button>
             </div>
